sidebar creation. Also tried and played around with fixed, relative and absolute postioning as well as learnt the concept of z-index

--- a/header.css
+++ b/header.css
@@ -4,6 +4,16 @@
     height: 60px;
     justify-content: space-between;
     /*align-items: center;*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+z-index: 100;
+    /*add border to the bottom on our header menu*/
+    border-bottom: solid;
+    border-bottom-color: rgba(211, 211, 211, 0.4);
+    border-bottom-width: 1px;
 }
 
 .header-left,
@@ -20,6 +30,7 @@
     margin-right: 30px;
     max-width: 500px;
     flex: 1;
+
 }
 
 .header-left {
@@ -30,6 +41,7 @@
 .header-right {
     width: 250px;
     justify-content: space-between;
+    flex-shrink: 0;
     /*to evenly distribute the icons in this flex box*/
 }
 
@@ -49,7 +61,8 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     box-shadow: inset 1px 2px 10px rgba(0, 0, 0, 0.15);
-
+    width: 0;
+    /*we resize the width of search bar to zero so that it completely shrinks*/
 }
 
 .search-bar::placeholder {
