--- a/youtube.css
+++ b/youtube.css
@@ -1,6 +1,7 @@
 body {
     font-family: Roboto, Arial;
-    
+    padding-top: 80px;
+    padding-left: 80px;
 }
 
 .image-thumbnail {
@@ -57,4 +58,16 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 15px;
     row-gap: 40px;
+    
+}
+
+.video-time{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.658);
+    color: white;
+    bottom: 20px;
+    right: 10px;
+    padding: 4px;
+    font-size: 12.5px;
+    border-radius: 3px;
 }
